force-app/main/objects/ErrorLog__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>This field will store the impacted component(Apex class,lightning component,Workflow,Process builder,Flow)&apos;s name</description>
    <label>Component Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>