force-app/main/objects/ErrorLog__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>