force-app/main/objects/ErrorLog__c/fields/Error_Source__c.field-meta.xml
<CustomField>
    <fullName>Error_Source__c</fullName>
    <description>This field will store the source of error from where the error has invoked.</description>
    <inlineHelpText>This field will store the source of error from where the error has invoked.</inlineHelpText>
    <label>Error Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>