force-app/main/objects/ErrorLog__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>This field will store the details of exception type, such as DmlException, ListException, SObjectException, and so on</description>
    <inlineHelpText>This field will store the details of exception type, such as DmlException, ListException, SObjectException, and so on</inlineHelpText>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>