force-app/main/objects/ErrorLog__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Exception_Type__c</columns>
    <columns>Error_Source__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Current_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>